--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "My project (7).sln"
+    "dotnet.defaultSolution": "Glitch-Garden.sln"
 }
